fix: page scrollbar always visible (#518)
This is caused by reset css of Vuetify

--- a/solara/server/assets/style.css
+++ b/solara/server/assets/style.css
@@ -1,3 +1,8 @@
+html {
+  /* override vuetify's css reset ress.css */
+  overflow-y: auto;
+}
+
 .jupyter-widgets code {
     /* background-color: unset; */
     /* padding: 10px; */
